--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,28 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu contentId="mainMenu" menuId="mainMenu" side="start">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>PaiBnB</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <ion-item lines="none">
+          <ion-icon slot="start" name="business"></ion-icon>
+          <ion-label>Discover Places</ion-label>
+        </ion-item>
+        <ion-item lines="none">
+          <ion-icon slot="start" name="checkbox-outline"></ion-icon>
+          <ion-label>Your Bookings</ion-label>
+        </ion-item>
+        <ion-item lines="none">
+          <ion-icon slot="start" name="exit"></ion-icon>
+          <ion-label>Logout</ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+
+  <ion-router-outlet id="mainMenu">
+  </ion-router-outlet>
 </ion-app>
