--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,18 +7,24 @@
     </ion-header>
     <ion-content>
       <ion-list>
-        <ion-item lines="none">
-          <ion-icon slot="start" name="business"></ion-icon>
-          <ion-label>Discover Places</ion-label>
-        </ion-item>
-        <ion-item lines="none">
-          <ion-icon slot="start" name="checkbox-outline"></ion-icon>
-          <ion-label>Your Bookings</ion-label>
-        </ion-item>
-        <ion-item lines="none">
-          <ion-icon slot="start" name="exit"></ion-icon>
-          <ion-label>Logout</ion-label>
-        </ion-item>
+        <ion-menu-toggle menu="mainMenu">
+          <ion-item lines="none" routerLink="/places/tabs/discover">
+            <ion-icon slot="start" name="business"></ion-icon>
+            <ion-label>Discover Places</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+        <ion-menu-toggle>
+          <ion-item lines="none" routerLink="/bookings">
+            <ion-icon slot="start" name="checkbox-outline"></ion-icon>
+            <ion-label>Your Bookings</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+        <ion-menu-toggle>
+          <ion-item lines="none" (click)="onLogout()" button>
+            <ion-icon slot="start" name="exit"></ion-icon>
+            <ion-label>Logout</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
       </ion-list>
     </ion-content>
   </ion-menu>
