--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -5,5 +5,5 @@
 </ion-header>
 
 <ion-content>
-  <ion-button color="primary" (click)="onLogin()">Login</ion-button>
+  <ion-button class="ion-padding" color="primary" (click)="onLogin()">Login</ion-button>
 </ion-content>
