--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons>
+    <ion-buttons slot="start">
       <ion-menu-button menu="mainMenu"></ion-menu-button>
     </ion-buttons>
     <ion-title>My Offers</ion-title>
@@ -20,15 +20,24 @@
           <ion-list-header>
             <ion-label>Current Offers</ion-label>
           </ion-list-header>
-          <ion-item *ngFor="let offer of offers" detail [routerLink]="['/places/tabs/offers', offer.id]">
-            <ion-thumbnail slot="start">
-              <ion-img [src]="offer.imageUrl"></ion-img>
-            </ion-thumbnail>
-            <ion-label>
-              <h2>{{offer.title}}</h2>
-              <p>{{offer.description}}</p>
-            </ion-label>
-          </ion-item>
+          <ion-item-sliding *ngFor="let offer of offers" #slidingItem>
+            <ion-item detail [routerLink]="['/places/tabs/offers', offer.id]">
+              <ion-thumbnail slot="start">
+                <ion-img [src]="offer.imageUrl"></ion-img>
+              </ion-thumbnail>
+              <ion-label>
+                <h2>{{offer.title}}</h2>
+                <p>{{offer.description}}</p>
+              </ion-label>
+            </ion-item>
+            <ion-item-options side="end">
+              <!--RouterLink does not close the sliding
+              [routerLink]="['/places/tabs/offers/edit', offer.id]" -->
+              <ion-item-option color="secondary" (click)="onEdit(offer.id, slidingItem)">
+                <ion-icon name="create" slot="icon-only"></ion-icon>
+              </ion-item-option>
+            </ion-item-options>
+          </ion-item-sliding>
         </ion-list>
       </ion-col>
     </ion-row>
