--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -5,6 +5,6 @@
 </ion-header>
 
 <ion-content>
-  <ion-spinner color="primary" *ngIf="isLoading"></ion-spinner>
-  <ion-button class="ion-padding" color="primary" (click)="onLogin()" *ngIf="!isLoading">Login</ion-button>
+  <!-- <ion-spinner color="primary" *ngIf="isLoading"></ion-spinner> -->
+  <ion-button class="ion-padding" color="primary" (click)="onLogin()">Login</ion-button>
 </ion-content>
