--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -6,5 +6,27 @@
 
 <ion-content>
   <!-- <ion-spinner color="primary" *ngIf="isLoading"></ion-spinner> -->
-  <ion-button class="ion-padding" color="primary" (click)="onLogin()">Login</ion-button>
+  <ion-grid>
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+        <ion-list>
+          <ion-item>
+            <ion-label position="floating">E-Mail</ion-label>
+            <ion-input type="email"></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-label position="floating">Password</ion-label>
+            <ion-input type="password"></ion-input>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+        <!-- expand can be 'full' -->
+        <ion-button color="primary" fill="clear" expand="block">Switch to Login</ion-button>
+        <ion-button color="primary" (click)="onLogin()" expand="block">Login</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
