--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -6,27 +6,29 @@
 
 <ion-content>
   <!-- <ion-spinner color="primary" *ngIf="isLoading"></ion-spinner> -->
-  <ion-grid>
-    <ion-row>
-      <ion-col size-sm="6" offset-sm="3">
-        <ion-list>
-          <ion-item>
-            <ion-label position="floating">E-Mail</ion-label>
-            <ion-input type="email"></ion-input>
-          </ion-item>
-          <ion-item>
-            <ion-label position="floating">Password</ion-label>
-            <ion-input type="password"></ion-input>
-          </ion-item>
-        </ion-list>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size-sm="6" offset-sm="3">
-        <!-- expand can be 'full' -->
-        <ion-button color="primary" fill="clear" expand="block">Switch to Login</ion-button>
-        <ion-button color="primary" (click)="onLogin()" expand="block">Login</ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+  <form #f="ngForm" (ngSubmit)="onSubmit(f)">
+    <ion-grid>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-list>
+            <ion-item>
+              <ion-label position="floating">E-Mail</ion-label>
+              <ion-input type="email" ngModel name="email" required email #emailCtrl="ngModel"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label position="floating">Password</ion-label>
+              <ion-input type="password" ngModel name="password" required minlength="6"></ion-input>
+            </ion-item>
+          </ion-list>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <!-- expand can be 'full' -->
+          <ion-button type="button" color="primary" fill="clear" expand="block">Switch to Login</ion-button>
+          <ion-button type="submit" color="primary" (click)="onLogin()" expand="block">Login</ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </form>
 </ion-content>
