--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Authenticate</ion-title>
+    <ion-title>{{ isLoginMode ? 'LOGIN' : 'SIGNUP'}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -23,7 +23,7 @@
               <ion-input type="password" ngModel name="password" required minlength="6" #passwordCtrl="ngModel">
               </ion-input>
             </ion-item>
-            <ion-item line="none" *ngIf="!passwordCtrl.valid && passwordCtrl.valid">
+            <ion-item lines="none" *ngIf="!passwordCtrl.valid && passwordCtrl.touched">
               <ion-text>Should at least be 6 characters long.</ion-text>
             </ion-item>
           </ion-list>
@@ -32,8 +32,11 @@
       <ion-row>
         <ion-col size-sm="6" offset-sm="3">
           <!-- expand can be 'full' -->
-          <ion-button type="button" color="primary" fill="clear" expand="block">Switch to Login</ion-button>
-          <ion-button type="submit" color="primary" (click)="onLogin()" expand="block" [disabled]="!f.valid">Login
+          <ion-button type="button" color="primary" fill="clear" expand="block" (click)="onSwitchAuthMode()">
+            Switch to {{ isLoginMode ? 'Signup' : 'Login' }}
+          </ion-button>
+          <ion-button type="submit" color="primary" (click)="onLogin()" expand="block" [disabled]="!f.valid">
+            {{ isLoginMode ? 'Login' : 'Signup'}}
           </ion-button>
         </ion-col>
       </ion-row>
