--- a/src/app/places/offers/new-offer/new-offer.page.html
+++ b/src/app/places/offers/new-offer/new-offer.page.html
@@ -1,38 +1,55 @@
 <ion-header>
-  <ion-toolbar slot="start">
-    <ion-buttons>
+  <ion-toolbar>
+    <ion-buttons slot="start">
       <ion-back-button defaultHref="/places/tabs/offers"></ion-back-button>
     </ion-buttons>
     <ion-title>New Offer</ion-title>
+    <ion-buttons slot="primary">
+      <ion-button (click)="onCreateOffer()">
+        <ion-icon name="checkmark" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-grid fixed class="ion-no-padding">
-    <ion-row class="ion-align-items-center ion-justify-content-center">
-      <ion-col size="4">Row 1 - Col 1</ion-col>
-      <ion-col size="4">
-        <ion-card>
-          <ion-card-content>
-            <h1>The Column</h1>
-            <p>
-              Row 1 - Col 2
-            </p>
-          </ion-card-content>
-        </ion-card>
+  <ion-grid>
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+        <ion-item>
+          <ion-label position="floating">Title</ion-label>
+          <ion-input type="text" autocomplete autocorrect></ion-input>
+        </ion-item>
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col>Row 1 - Col 1</ion-col>
-      <ion-col>
-        <ion-card>
-          <ion-card-content>
-            <h1>The Column</h1>
-            <p>
-              Row 1 - Col 2
-            </p>
-          </ion-card-content>
-        </ion-card>
+      <ion-col size-sm="6" offset-sm="3">
+        <ion-item>
+          <ion-label position="floating">Short Description</ion-label>
+          <ion-textarea rows="3"></ion-textarea>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+        <ion-item>
+          <ion-label position="floating">Price</ion-label>
+          <ion-input type="number"></ion-input>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size-sm="3" offset-sm="3">
+        <ion-item>
+          <ion-label position="floating">Available from</ion-label>
+          <ion-datetime min="2019-01-01" max="2022-12-31"></ion-datetime>
+        </ion-item>
+      </ion-col>
+      <ion-col size-sm="3">
+        <ion-item>
+          <ion-label position="floating">Available to</ion-label>
+          <ion-datetime min="2019-01-02" max="2022-12-31"></ion-datetime>
+        </ion-item>
       </ion-col>
     </ion-row>
   </ion-grid>
