--- a/src/app/places/offers/edit-offer/edit-offer.page.html
+++ b/src/app/places/offers/edit-offer/edit-offer.page.html
@@ -4,9 +4,38 @@
       <ion-back-button [defaultHref]="'/places/tabs/offers/' + place.id "></ion-back-button>
     </ion-buttons>
     <ion-title>Editing - {{place.title}}</ion-title>
+    <ion-buttons slot="primary">
+      <ion-button (click)="onUpdateOffer()" [disabled]="!form.valid">
+        <ion-icon name="checkmark" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <form [formGroup]="form">
+    <ion-grid>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-item>
+            <ion-label position="floating">Title</ion-label>
+            <ion-input formControlName="title" type="text" autocomplete autocorrect></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-item>
+            <ion-label position="floating">Short Description</ion-label>
+            <ion-textarea formControlName="description" rows="3"></ion-textarea>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row *ngIf="!form.get('description').valid && form.get('description').touched">
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-text>Description must be between 1 and 180 characters.</ion-text>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </form>
 </ion-content>
