--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -36,7 +36,7 @@
     </ion-row>
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
-        <ion-virtual-scroll [items]="listedLoadedPlaces">
+        <!-- <ion-virtual-scroll [items]="listedLoadedPlaces">
           <ion-item *virtualItem="let place" [routerLink]="['/places/tabs/discover', place.id]" detail>
             <ion-thumbnail slot="start">
               <ion-img [src]="place.imageUrl"></ion-img>
@@ -46,7 +46,18 @@
               <p>{{place.description}}</p>
             </ion-label>
           </ion-item>
-        </ion-virtual-scroll>
+        </ion-virtual-scroll> -->
+        <ion-list>
+          <ion-item *ngFor="let place of listedLoadedPlaces" [routerLink]="['/places/tabs/discover', place.id]" detail>
+            <ion-thumbnail slot="start">
+              <ion-img [src]="place.imageUrl"></ion-img>
+            </ion-thumbnail>
+            <ion-label>
+              <h2>{{place.title}}</h2>
+              <p>{{place.description}}</p>
+            </ion-label>
+          </ion-item>
+        </ion-list>
       </ion-col>
     </ion-row>
   </ion-grid>
