--- a/src/app/places/discover/place-detail/place-detail.page.html
+++ b/src/app/places/discover/place-detail/place-detail.page.html
@@ -21,7 +21,7 @@
         </p>
       </ion-col>
     </ion-row>
-    <ion-row>
+    <ion-row *ngIf="isBookable">
       <ion-col size="12" size-sm="6" offset-sm="3" class="ion-text-center">
         <ion-button color="primary" class="ion-margin" (click)="onBookPlace()">Book</ion-button>
       </ion-col>
