--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -16,7 +16,16 @@
   <ion-grid class="padding">
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
-        <ion-list>
+        <ion-spinner color="primary" *ngIf="isLoading"></ion-spinner>
+        <div *ngIf="isLoading || offers.length <=0" class="ion-text-center">
+          <p>
+            No offers found! Please create one first!
+          </p>
+          <ion-button color="primary" routerLink="/places/tabs/offers/new">
+            Offer New Place
+          </ion-button>
+        </div>
+        <ion-list *ngIf="!isLoading && offers.length > 0">
           <ion-list-header>
             <ion-label>Current Offers</ion-label>
           </ion-list-header>
