--- a/src/app/places/discover/place-detail/place-detail.page.html
+++ b/src/app/places/discover/place-detail/place-detail.page.html
@@ -11,13 +11,13 @@
   <ion-grid class="ion-no-padding">
     <ion-row>
       <ion-col size-sm="6" offset-sm="3" class="ion-no-padding">
-        <ion-img [src]="place.imageUrl"></ion-img>
+        <ion-img [src]="place?.imageUrl"></ion-img>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col size="12" size-sm="6" offset-sm="3" class="ion-padding ion-text-center">
         <p>
-          {{place.description}}
+          {{place?.description}}
         </p>
       </ion-col>
     </ion-row>
