--- a/src/app/shared/pickers/location-picker/location-picker.component.html
+++ b/src/app/shared/pickers/location-picker/location-picker.component.html
@@ -1,6 +1,9 @@
 <div class="picker">
-  <ion-spinner color="primary" *ngIf="isLoading"></ion-spinner>
-  <ion-img class="location-image" [src]="selectedLocationImage" *ngIf="selectedLocationImage && !isLoading"></ion-img>
+  <ion-spinner color="primary" *ngIf="isLoading">
+  </ion-spinner>
+  <ion-img role="button" (click)="onPickLocation()" class="location-image" [src]="selectedLocationImage"
+    *ngIf="selectedLocationImage && !isLoading">
+  </ion-img>
   <ion-button color="primary" (click)="onPickLocation()" *ngIf="!selectedLocationImage && !isLoading">
     <ion-icon slot="start" name="map"></ion-icon>
     <ion-label>Select Location</ion-label>
