--- a/src/app/places/discover/place-detail/place-detail.page.html
+++ b/src/app/places/discover/place-detail/place-detail.page.html
@@ -33,7 +33,8 @@
     </ion-row>
     <ion-row>
       <ion-col size="12" size-sm="6" offset-sm="3" class="ion-no-padding">
-        <ion-img class="location-image" [src]="place?.location.staticMapImageUrl"></ion-img>
+        <ion-img role="button" (click)="onShowFullMap()" class="location-image"
+          [src]="place?.location.staticMapImageUrl"></ion-img>
       </ion-col>
     </ion-row>
     <ion-row *ngIf="isBookable">
