--- a/src/app/places/offers/new-offer/new-offer.page.html
+++ b/src/app/places/offers/new-offer/new-offer.page.html
@@ -59,13 +59,14 @@
         </ion-col>
       </ion-row>
       <ion-row>
-        <ion-col size-sm="3" offset-sm="3">
-          <app-location-picker (locationPick)="onLocationPicked($event)"></app-location-picker>
+        <ion-col size-sm="6" offset-sm="3">
+          <app-location-picker [showPreview]="form.get('location').value" (locationPick)="onLocationPicked($event)">
+          </app-location-picker>
         </ion-col>
       </ion-row>
       <ion-row>
-        <ion-col size-sm="3" offset-sm="3">
-          <app-image-picker (imagePick)="onImagePicked($event)">
+        <ion-col size-sm="6" offset-sm="3">
+          <app-image-picker [showPreview]="form.get('image').value" (imagePick)="onImagePicked($event)">
           </app-image-picker>
         </ion-col>
       </ion-row>
