--- a/src/app/shared/pickers/image-picker/image-picker.component.html
+++ b/src/app/shared/pickers/image-picker/image-picker.component.html
@@ -1,7 +1,8 @@
 <div class="picker">
-  <ion-img role="button" (click)="onPickImage()" class="image" [src]="selectedImage" *ngIf="selectedImage">
+  <ion-img role="button" (click)="onPickImage()" class="image" [src]="selectedImage"
+    *ngIf="selectedImage && showPreview">
   </ion-img>
-  <ion-button color="primary" (click)="onPickImage()" *ngIf="!selectedImage">
+  <ion-button color="primary" (click)="onPickImage()" *ngIf="!selectedImage && !showPreview">
     <ion-icon slot="start" name="camera"></ion-icon>
     <ion-label>Take Picture</ion-label>
   </ion-button>
