--- a/src/app/shared/pickers/location-picker/location-picker.component.html
+++ b/src/app/shared/pickers/location-picker/location-picker.component.html
@@ -4,7 +4,7 @@
   <ion-img role="button" (click)="onPickLocation()" class="location-image" [src]="selectedLocationImage"
     *ngIf="selectedLocationImage && !isLoading && showPreview">
   </ion-img>
-  <ion-button color="primary" (click)="onPickLocation()" *ngIf="!selectedLocationImage && !isLoading && !showPreview">
+  <ion-button color="primary" (click)="onPickLocation()" *ngIf="(!selectedLocationImage || !showPreview) && !isLoading">
     <ion-icon slot="start" name="map"></ion-icon>
     <ion-label>Select Location</ion-label>
   </ion-button>
